# pytest-gitcov

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/: .coveragerc  setup.py
src/pytest-gitcov/: plugin.py
src/pytest_gitcov/: coverage.py  git.py  plugin.py  report.py
src/tests/unittests/: test_plugin.py
tests/unittests/: test_coverage.py  test_plugin.py
