[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = []

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.8"
dependencies = [
    "setuptools-git-version",
    "ipython",
    "pytest",
    "pytest-cov",
    "twine",
    "pylint",
    "ipdb",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
