[tool.pdm]
distribution = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pyhamcrest",
    "pdbpp>=0.10.3",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.12"
dependencies = [
    "setuptools-git-version",
    "ipython",
    "pytest",
    "pytest-cov",
    "twine",
    "pylint",
    "ipdb",
]
name = "pytest-gitcov"
version = "0.1.0"
description = "Extension for pytest to report on the coverage for the lines modified in a given commit or commit range. The vision is to be able to run pytests on a code base before submitting a pull request or code review, to see the lines of code that were modified by you but not covered by unit-tests."
authors = [
    {name = "David James McCorrie", email = "djmccorrie@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
